terraform-autoscaling/tf-as-example3/sg.tf
# create security groups
resource "aws_security_group" "tf_sg" {
  name        = "tf-sg"
  description = "Demo security group"
  vpc_id      = aws_vpc.tf_VPC.id

  ingress {
    description = "HTTP from web"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH from anywhere"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "tf-sg"
  }
}
